--- a/views/index.ejs
+++ b/views/index.ejs
@@ -274,7 +274,7 @@
             <!-- /.count -->
           </div>
           <!-- /.icon-box -->
-          <h3>REgister Account</h3>
+          <h3>Register Account</h3>
         </div>
         <!-- /.single-process -->
       </div>
@@ -558,7 +558,7 @@
               </div>
               <!-- /.percent -->
               <div class="info">
-                <p>Minimum Deposit $500</p>
+                <p>Minimum Deposit $100</p>
                 <p>Maximum Deposit $4,999</p>
                 <p>Enhanced security</p>
                 <p>get Paid profit of 10% every 10 days</p>
