--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -252,7 +252,7 @@
                                             <em class="icon ni ni-link-alt"></em>
                                         </div>
                                         <input type="text" class="form-control copy-text" id="refUrl"
-                                            value="https://www.<%=sitename%>/register?ref=<%=currentUser.referralId%>">
+                                            value="https://www.acecoins.uk/register?ref=<%=currentUser.referralId%>">
                                     </div>
                                 </div>
                             </div>
