--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -17,7 +17,7 @@
             </div>
             <div class="col-lg-6">
                 <div class="nk-block-content text-center text-lg-left">
-                    <p class="text-soft">&copy; 2020 Acecoins. All Rights Reserved.</p>
+                    <p class="text-soft">&copy; 2020 - 2022 Acecoins. All Rights Reserved.</p>
                 </div>
             </div>
         </div>
