--- a/views/dashboard/fund-wallet.ejs
+++ b/views/dashboard/fund-wallet.ejs
@@ -65,7 +65,7 @@
                   <div class="form-control-group">
                     <div class="form-info">USD</div>
                     <input type="text" class="form-control form-control-amount form-control-lg" id="custom-amount"
-                      name="amount1" placeholder="100.00">
+                      name="amount1" placeholder="100.00" onchange="document.querySelectorAll('.invest-amount-control').map(e => e.value = 'off')">
                   </div>
                 </div><!-- .invest-field -->
 
