--- a/views/dashboard/invest-details.ejs
+++ b/views/dashboard/invest-details.ejs
@@ -101,11 +101,11 @@
                 <li>
                   <div class="sub-text">Term</div>
                   <% if (investment.plan == 'Starter Plan'){ %>
-                  <div class="lead-text">3 Months</div>
+                  <div class="lead-text">1 Months</div>
                   <%}else if (investment.plan == 'Silver plan'){%>
-                  <div class="lead-text">6 Months</div>
+                  <div class="lead-text">2 Months</div>
                   <%}else{ %>
-                  <div class="lead-text">1 Year</div>
+                  <div class="lead-text">3 months</div>
                   <%} %>
                 </li>
                 <li>
@@ -121,9 +121,9 @@
                   <% if (investment.plan == 'Starter Plan'){ %>
                   <div class="lead-text"><%= investment.percentage * 100 /3%>%</div>
                   <%}else if (investment.plan == 'Silver plan'){%>
-                  <div class="lead-text"><%= investment.percentage * 100 / 6%>%</div>
+                  <div class="lead-text"><%= investment.percentage * 100 / 2%>%</div>
                   <%}else{ %>
-                  <div class="lead-text"><%= investment.percentage * 100 %>%</div>
+                  <div class="lead-text"><%= investment.percentage * 100 / 3%>%</div>
                   <%} %>
 
                 </li>
@@ -156,15 +156,15 @@
                   <div class="sub-text">Monthly profit</div>
                   <% if (investment.plan == 'Starter Plan'){ %>
                   <div class="lead-text"><span class="currency currency-usd">USD
-                    </span><%=investment.amount * ( investment.percentage /3)%>
+                    </span><%=investment.amount * ( investment.percentage )%>
                   </div>
                   <%}else if (investment.plan == 'Silver plan'){%>
                   <div class="lead-text"><span class="currency currency-usd">USD
-                    </span><%=investment.amount * (investment.percentage /6)%>
+                    </span><%=investment.amount * (investment.percentage /2)%>
                   </div>
                   <%}else{ %>
                   <div class="lead-text"><span class="currency currency-usd">USD
-                    </span><%=investment.amount * (investment.percentage  /12)%>
+                    </span><%=investment.amount * (investment.percentage  /3)%>
                   </div>
                   <%} %>
 
@@ -209,11 +209,11 @@
                 <% investment.interest.forEach((interest) => { %>
                 <tr>
                   <% if (investment.plan == 'Starter Plan'){ %>
-                  <td class="tb-col-type"><span class="sub-text">Profit - 15%</span></td>
+                  <td class="tb-col-type"><span class="sub-text">Profit - 10%</span></td>
                   ` <%}else if (investment.plan == 'Silver plan'){%>
-                  <td class="tb-col-type"><span class="sub-text">Profit - 20%</span></td>
+                  <td class="tb-col-type"><span class="sub-text">Profit - 15%</span></td>
                   <%}else{ %>
-                  <td class="tb-col-type"><span class="sub-text">Profit - 30%</span></td>
+                  <td class="tb-col-type"><span class="sub-text">Profit - 20%</span></td>
                   <%} %>
                   <td class="tb-col-date"><span class="sub-text"></span></td>
                   <td class="tb-col-time tb-col-end"><span class="lead-text">+ <%=interest%></span></td>
