--- a/views/dashboard/invest.ejs
+++ b/views/dashboard/invest.ejs
@@ -161,11 +161,11 @@
                         </li>
                         <li>
                           <div class="sub-text">Total net profit</div>
-                          <div class="lead-text">$ <span id="net-profit">0</span></div>
+                          <div class="lead-text">$ <span id="net-profit"> </span></div>
                         </li>
                         <li>
                           <div class="sub-text">Total Return</div>
-                          <div class="lead-text">$ <span id="net-return">0</span></div>
+                          <div class="lead-text">$ <span id="net-return"> </span></div>
                         </li>
                         <li>
                           <div class="sub-text">Term start at</div>
