--- a/views/dashboard/invest-details.ejs
+++ b/views/dashboard/invest-details.ejs
@@ -102,7 +102,7 @@
                   <div class="sub-text">Term</div>
                   <% if (investment.plan == 'Starter Plan'){ %>
                   <div class="lead-text">1 Months</div>
-                  <%}else if (investment.plan == 'Silver plan'){%>
+                  <%}else if (investment.plan == 'Silver Plan'){%>
                   <div class="lead-text">2 Months</div>
                   <%}else{ %>
                   <div class="lead-text">3 months</div>
@@ -120,7 +120,7 @@
                   <div class="sub-text">Monthly Interest</div>
                   <% if (investment.plan == 'Starter Plan'){ %>
                   <div class="lead-text"><%= investment.percentage * 100 /3%>%</div>
-                  <%}else if (investment.plan == 'Silver plan'){%>
+                  <%}else if (investment.plan == 'Silver Plan'){%>
                   <div class="lead-text"><%= investment.percentage * 100 / 2%>%</div>
                   <%}else{ %>
                   <div class="lead-text"><%= investment.percentage * 100 / 3%>%</div>
@@ -158,7 +158,7 @@
                   <div class="lead-text"><span class="currency currency-usd">USD
                     </span><%=investment.amount * ( investment.percentage )%>
                   </div>
-                  <%}else if (investment.plan == 'Silver plan'){%>
+                  <%}else if (investment.plan == 'Silver Plan'){%>
                   <div class="lead-text"><span class="currency currency-usd">USD
                     </span><%=investment.amount * (investment.percentage /2)%>
                   </div>
