--- a/views/dashboard/invest.ejs
+++ b/views/dashboard/invest.ejs
@@ -149,7 +149,7 @@
                         </li>
                         <li>
                           <div class="sub-text">Term of the scheme</div>
-                          <div class="lead-text"><span id="term"><%=plan.term%> </span>Months</div>
+                          <div class="lead-text"><span id="term"><%=plan.term%> </span>Days</div>
                         </li>
                         <li>
                           <div class="sub-text">10 days profit</div>
@@ -161,11 +161,11 @@
                         </li>
                         <li>
                           <div class="sub-text">Total net profit</div>
-                          <div class="lead-text">$ <span id="net-profit"> </span></div>
+                          <div class="lead-text">$ <span id="net-profit">0</span></div>
                         </li>
                         <li>
                           <div class="sub-text">Total Return</div>
-                          <div class="lead-text">$ <span id="net-return"> </span></div>
+                          <div class="lead-text">$ <span id="net-return">0</span></div>
                         </li>
                         <li>
                           <div class="sub-text">Term start at</div>
