--- a/views/partials/invest-footer.ejs
+++ b/views/partials/invest-footer.ejs
@@ -72,7 +72,7 @@
     monthlyProfit = (amount * percentage) / 100
     profit.innerHTML = monthlyProfit
     netProfit = Number(monthlyProfit * term)
-    net_profit.innerHTML = netProfit
+    net_profit.innerHTML = netProfit/10
     netReturn = Number(amount + netProfit)
     net_return.innerHTML = netReturn
     to_invest.innerHTML = amount
