Typo error fixed

--- a/views/calculator.ejs
+++ b/views/calculator.ejs
@@ -13,7 +13,7 @@
 
         <li><a href="https://acecoins.Uk">AceCoins </a> is not available to the general public and is opened only to the
             qualified members of <a href="https://acecoins.Uk">AceCoins </a>, the use of this site is restricted to our
-            members and to individuals personally invited by them. Every deposit is considered to be a private
+            members and to individuals personally invited by them. Every first deposit is considered to be a private
             transaction between the https://acecoins.Uk/ and its Member.</li>
 
         <li>As a private transaction, this program is exempt from the US Securities Act of 1933, the US Securities
