--- a/views/index.ejs
+++ b/views/index.ejs
@@ -154,10 +154,9 @@
                 <i class="accure-icon-award"></i>
               </div>
               <!-- /.icon-box -->
-              <h3>Licensed & certified</h3>
+              <h3>Secured and Encrypted</h3>
               <p>
-                Acecoins.uk (incorporation number: 11994686) been confirmed in
-                2016 by entering the data in the UK Companies House register.
+                Acecoins is fully secured and encrypted from DDOS attacks.
               </p>
             </div>
             <!-- /.single-about-box -->
@@ -382,7 +381,7 @@
             <h3>Referral Programs</h3>
             <p>
               We are ready to give you more profit by referring your friends. we
-              offer a direct referral commission of 10% for every deposit made
+              offer a direct referral commission of 10% for every first deposit made
               by your sign up. Join us and start making money with the reliable
               company.
             </p>
