--- a/views/partials/old-footer.ejs
+++ b/views/partials/old-footer.ejs
@@ -110,20 +110,23 @@
       <p class="company-name">Acecoins © 2019 </p>
     </div>
     <div class="col-md-4 col-sm-6 footer-contacts">
-      <div><span class="fa fa-map-marker footer-contacts-icon"> </span>
-        <p><span class="new-line-span">Ground Floor, 2 Woodberry Grove, N12 0DR</span> London, England</p>
-      </div>
-      <div><i class="fa fa-phone footer-contacts-icon"></i>
-        <p class="footer-center-info email text-left"> +44 70 3538 3453</p>
-      </div>
       <div><i class="fa fa-envelope footer-contacts-icon"></i>
         <p> <a href="mailto:admin@acecoins.uk" target="_top">admin@acecoins.uk</a></p>
+      </div>
+      <div><i class="fa fa-envelope footer-contacts-icon"></i>
+        <p> <a href="mailto:admin@acecoins.uk" target="_top">support@acecoins.uk</a></p>
+      </div>
+      <div><i class="fa fa-envelope footer-contacts-icon"></i>
+        <p> <a href="mailto:admin@acecoins.uk" target="_top">marketing@acecoins.uk</a></p>
       </div>
     </div>
     <div class="clearfix visible-sm-block"></div>
     <div class="col-md-4 footer-about">
       <h4>About the company</h4>
-      <p>Registered in the United Kingdom with a registration number under license of the company’s house: 11994686</p>
+      <p>One of Our vision  is to become a pillar of commercial reference worldwide using the crypto
+        evolution of network marketing and crypto financial education in order to be welcomed by our 
+        customers as the best strategic ally.
+      </p>
     </div>
   </div>
 </footer>
