update padlock Icon

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -151,7 +151,7 @@
           <div class="col-md-6 col-sm-6 col-xs-12">
             <div class="single-about-box hvr-bounce-to-bottom">
               <div class="icon-box">
-                <i class="accure-icon-award"></i>
+                <i class="accure-icon-padlock-2"></i>
               </div>
               <!-- /.icon-box -->
               <h3>Secured and Encrypted</h3>
