--- a/views/dashboard/income.ejs
+++ b/views/dashboard/income.ejs
@@ -50,7 +50,7 @@
                         <div class="nk-iv-wg3-sub">
                           <div class="nk-iv-wg3-amount">
                             <div class="number">
-                              <%=currentUser.balance + currentUser.profit%>
+                              <%=currentUser.balance%>
                               <small class="currency currency-usd">USD</small>
                             </div>
                           </div>
